Exercise 1.09/manifests/pingpong_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        -
          image: "katushka/ping-pong:1.1"
          name: ping-pong
